default: set experimental for rockylinux:9

--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -19,7 +19,7 @@ jobs:
       matrix:
         include:
           - molecule_distro: 'rockylinux:9'
-            experimental: false
+            experimental: true
           - molecule_distro: 'rockylinux:8'
             experimental: false
           - molecule_distro: 'centos:7'
