redhat: ensure /etc/rsyslog.d; +ansible backup

--- a/tasks/powershell-logging.yml
+++ b/tasks/powershell-logging.yml
@@ -18,6 +18,7 @@
     group: root
     mode: '0644'
     validate: 'rsyslogd -N2 -f %s'
+    backup: "{{ powershell_backup | default(false) }}"
   notify:
     - Restart rsyslog
 
