--- a/tasks/redhat.yml
+++ b/tasks/redhat.yml
@@ -13,3 +13,20 @@
 - name: Redhat | list yum repos
   ansible.builtin.command: ls -l /etc/yum.repos.d/
   changed_when: false
+
+- name: RedHat | Ensure /etc/rsyslog.d exists
+  ansible.builtin.file:
+    dest: /etc/rsyslog.d
+    state: directory
+    owner: root
+    mode: '0755'
+- name: RedHat | Ensure rsyslog use rsyslog.d directory
+  ansible.builtin.lineinfile:
+    dest: /etc/rsyslog.conf
+    regexp: '^\$IncludeConfig /etc/.*'
+    line: '$IncludeConfig /etc/rsyslog.d/*.conf'
+    mode: '0644'
+    backup: "{{ powershell_backup | default(false) }}"
+    validate: 'rsyslogd -N2 -f %s'
+  notify:
+    - Restart rsyslog
