--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -27,5 +27,9 @@
       when: >
         (ansible_distribution == "Ubuntu" and ansible_distribution_major_version | int >= 16) or
         (ansible_os_family == "RedHat" and ansible_distribution_major_version | int >= 8)
+    - name: RedHat7 | Set python
+      ansible.builtin.set_fact:
+        powershell_python: python
+      when: (ansible_os_family == "RedHat" and ansible_distribution_major_version | int == 7)
   roles:
     - juju4.powershell
