--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -25,13 +25,13 @@ jobs:
           - molecule_distro: 'rockylinux:9'
             experimental: true
           - molecule_distro: 'ubuntu:24.04'
-            experimental: false
+            experimental: true
           - molecule_distro: 'ubuntu:22.04'
             experimental: false
           - molecule_distro: 'ubuntu:20.04'
             experimental: false
           - molecule_distro: 'debian:12'
-            experimental: false
+            experimental: true
     env:
       ANSIBLE_CALLBACKS_ENABLED: profile_tasks
       MOLECULE_NO_LOG: "false"
