ci(default): enforce bool broken conditional in verify.yml - ansible-core 2.19.0-2

--- a/molecule/default/verify.yml
+++ b/molecule/default/verify.yml
@@ -23,7 +23,8 @@
         manager: auto
     - name: Validate that needed packages are present
       ansible.builtin.assert:
-        that: ansible_facts.packages['powershell']
+        that:
+          - ansible_facts.packages['powershell'] is defined
 
     - name: Check powershell config
       ansible.builtin.stat:
