--- a/tasks/powershell-logging.yml
+++ b/tasks/powershell-logging.yml
@@ -8,7 +8,7 @@
   until: pkg_result is success
 
 - name: RedHat
-  when: ansible_os_family == "RedHat"
+  when: ansible_facts['os_family'] == "RedHat"
   block:
     - name: RedHat | Ensure /etc/rsyslog.d exists
       ansible.builtin.file:
