--- a/tasks/redhat.yml
+++ b/tasks/redhat.yml
@@ -2,7 +2,7 @@
 
 - name: RHEL | Install Microsoft repository
   ansible.builtin.get_url:
-    url: "https://packages.microsoft.com/config/rhel/{{ ansible_distribution_major_version }}/prod.repo"
+    url: "https://packages.microsoft.com/config/rhel/{{ ansible_facts['distribution_major_version'] }}/prod.repo"
     dest: /etc/yum.repos.d/microsoft.repo
     owner: root
     group: root
