--- a/tasks/debian.yml
+++ b/tasks/debian.yml
@@ -1,5 +1,4 @@
 ---
-
 - name: Debian | Update cache
   ansible.builtin.apt:
     update_cache: "yes"
@@ -26,6 +25,7 @@
 
 - name: Ensure Microsoft apt repository is present
   ansible.builtin.apt_repository:
-    repo: "deb [arch=amd64] https://packages.microsoft.com/repos/microsoft-{{ ansible_facts['distribution'] | lower }}-{{ ansible_facts['distribution_release'] | lower }}-prod {{ ansible_facts['distribution_release'] | lower }} main"
+    repo: "deb [arch=amd64] https://packages.microsoft.com/repos/microsoft-{{ ansible_facts['distribution'] | lower }}-{{ ansible_facts['distribution_release'] |
+      lower }}-prod {{ ansible_facts['distribution_release'] | lower }} main"
     state: present
     filename: powershell
