--- a/tasks/powershell-core.yml
+++ b/tasks/powershell-core.yml
@@ -1,5 +1,4 @@
 ---
-
 - name: Ensure Powershell package is present
   ansible.builtin.package:
     name: powershell
@@ -11,5 +10,5 @@
   ansible.builtin.template:
     src: "{{ powershell_config_template }}"
     dest: /opt/microsoft/powershell/7/powershell.config.json
-    mode: '0644'
+    mode: "0644"
     validate: "{{ powershell_python | default('python3') }} -mjson.tool %s"
