--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -5,9 +5,7 @@ on:
   push:
   pull_request:
   workflow_dispatch:
-
 permissions: {}
-
 jobs:
   build:
 
@@ -27,7 +25,7 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@83679a892e2d95755f2dac6acb0bfd1e9ac5d548 # v6
         with:
-          python-version: '3.13'
+          python-version: "3.13"
       - name: Install dependencies
         run: |
           python3 -m pip install --upgrade pip
