--- a/meta/main.yml
+++ b/meta/main.yml
@@ -4,7 +4,7 @@ galaxy_info:
   author: juju4
   description: Setup powershell, its config and logging under linux.
   license: BSD
-  min_ansible_version: '1.9'
+  min_ansible_version: "1.9"
   platforms:
     - name: EL
       versions:
