ci(default): remove experimental for ubuntu-24.04

--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -29,7 +29,7 @@ jobs:
             experimental: true
             suite: default
           - molecule_distro: "ubuntu:24.04"
-            experimental: true
+            experimental: false
             suite: default
           - molecule_distro: "ubuntu:22.04"
             experimental: false
