fix: missing python3-debian

--- a/tasks/debian.yml
+++ b/tasks/debian.yml
@@ -12,6 +12,7 @@
       - curl
       - gnupg
       - apt-transport-https
+      - python3-debian
     state: present
   register: pkg_result
   until: pkg_result is success
