--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -5,7 +5,7 @@
 
 - name: Validate powershell rsyslog config
   ansible.builtin.command:
-    cmd: "rsyslogd -N2 /etc/rsyslog.d/40-powershell.conf"
+    cmd: "rsyslogd -N2"
   changed_when: false
 
 - name: Restart rsyslog
