--- a/.github/workflows/default-monthly.yml
+++ b/.github/workflows/default-monthly.yml
@@ -1,13 +1,12 @@
 ---
-name: AnsibleCI
+name: AnsibleCI-monthly
 
 on:
-  push:
-  pull_request:
   workflow_dispatch:
-  schedule: # run weekly, every monday 01:00
-    - cron: "0 1 * * 1"
+  schedule:  # run on the 12th of the month at 01:00 UTC
+    - cron: '0 1 12 * *'
   merge_group:
+
 concurrency:
   group: ${{ github.workflow }}-${{ github.head_ref || github.run_id }}
   cancel-in-progress: true
@@ -22,14 +21,14 @@ jobs:
     continue-on-error: ${{ matrix.experimental }}
     strategy:
       fail-fast: false
-      max-parallel: 4
+      max-parallel: 2
       matrix:
         include:
           - molecule_distro: "almalinux:10-kitten"
             experimental: true
             suite: default
           - molecule_distro: "ubuntu:24.04"
-            experimental: false
+            experimental: true
             suite: default
           - molecule_distro: "ubuntu:22.04"
             experimental: false
